--- a/templates/home.html
+++ b/templates/home.html
@@ -4,13 +4,31 @@
 <html>
 <head>
     <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/home.css') }}">
 </head>
 <body>
-    <h1>Chatbots</h1>
-    <ul>
-        {% for chatbot in chatbots %}
-            <li><a href="{{ url_for('admin', chatbot_id=chatbot[0]) }}">{{ chatbot[1] }}</a></li>
-        {% endfor %}
-    </ul>
+    <div class="banner">
+        <a href="https://www.eccoai.org/">
+            <img src="{{ url_for('static', filename='images/Ecco_logo.png') }}" alt="Ecco Logo" style="height: 75px; margin: 5px 20px;">
+        </a>
+        <button class="button_logout" onclick="location.href='https://app.eccoai.org/login'">Logout</button>
+    </div>
+    <section class="body">
+        <h1>Chatbots</h1>
+        <p>Click in its time to get started</p>
+
+        <ul>
+            {% for chatbot in chatbots %}
+                <a href="{{ url_for('admin', chatbot_id=chatbot[0]) }}">
+                    <li class="chatbot-box">
+                        {{ chatbot[1] }}
+                        <br>
+                        <hr>
+                        created on: 01/01/2021
+                    </li>
+                </a>
+            {% endfor %}
+        </ul>
+    </section>
 </body>
 </html>
