--- a/static/css/home.css
+++ b/static/css/home.css
@@ -39,8 +39,14 @@ html, body {
     margin: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     border-radius: 4px;
+    font-size: 20px; /* Adjust as needed */
+    font-weight: bold; /* Makes the text bold */
 }
 
+a:has(.chatbot-box) {
+    text-decoration: none;
+    color: inherit;
+}
 .body { 
     padding-top: 150px; /* Adjusted to account for fixed banner */
     padding-left: 5%;
@@ -89,8 +95,7 @@ p {
 
 .metric-box p {
     margin: 0;
-    font-size: 1.5em;
-    font-weight: bold;
+    font-size: 1em;
 }
 
 /* Adjusting the overall box styling */
