--- a/templates/home.html
+++ b/templates/home.html
@@ -22,13 +22,25 @@
         <div id="myContainer" class="container">
             <div class="dashboard-metrics">
                 <div class="metric-box">
-                    <p>{{count}}/150 Messages</p>
+                    {% if user_plan == 'price_1OqKx9LO2ToUaMQEqSyrCogs' %}
+                        <p>{{count}}/50 Messages</p>
+                    {% elif user_plan == 'price_1OqKxQLO2ToUaMQE6al9uLEO' %}
+                        <p>{{count}}/2500 Messages</p>
+                    {% elif user_plan == 'price_1OqKxhLO2ToUaMQEqRFU0dh9' %}
+                        <p>{{count}}/10000 Messages</p>
+                    {% endif %}
                 </div>
                 <div class="metric-box">
-                    <p>0/30 Bots</p>
+                    {% if user_plan == 'price_1OqKx9LO2ToUaMQEqSyrCogs' %}
+                        <p>{{chatbots|length}}/1 Bots</p>
+                    {% elif user_plan == 'price_1OqKxQLO2ToUaMQE6al9uLEO' %}
+                        <p>{{chatbots|length}}/3 Bots</p>
+                    {% elif user_plan == 'price_1OqKxhLO2ToUaMQEqRFU0dh9' %}
+                        <p>{{chatbots|length}}/5 Bots</p>
+                    {% endif %}
                 </div>
                 <div class="metric-box">
-                    <p>Usage Reset Date: 3/15/2024</p>
+                    <p>Usage Reset Date: {{renewal_date.strftime('%m/%d/%Y')}}</p>
                 </div>
             </div>
             <div id="loading-animation" style="width: 200px; height: 200px; display: none;"></div>
