--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -41,8 +41,8 @@
     </ul>
     <div class="code-container">
         <pre><code id="chatbot-code" class="language-javascript">
-            &lt;img id="chatbot-button" src="http://127.0.0.1:5000//static/images/ecco_icon.png" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;"&gt;
-            &lt;div id="p" style="display:block;position:fixed;bottom:100px;right:15px;z-index:10000;background:#fff;border:1px solid #ccc;padding:10px;border-radius:5px;box-shadow:0 0 10px rgba(0,0,0,.1);">{{ settings['popup_message'] }}&lt;/div&gt;
+            &lt;img id="chatbot-button" src="http://127.0.0.1:5000//static/images/{{ settings['widget_icon'] }}.svg" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;"&gt;
+            &lt;div id="p" style="display:{{popup_logic}};position:fixed;bottom:100px;right:15px;z-index:10000;background:#fff;border:1px solid #ccc;padding:10px;border-radius:5px;box-shadow:0 0 10px rgba(0,0,0,.1);">{{ settings['popup_message'] }}&lt;/div&gt;
             &lt;span id="c" style="display:none;position:fixed;bottom:128px;right:10px;z-index:10001;cursor:pointer;padding:2px 6px;border-radius:10px;background-color:#dadada;font-family: arial;color: #4e4e4e;"&gt;x&lt;/span&gt;
             &lt;script&gt;
             var p=document.getElementById('p'),c=document.getElementById('c');
@@ -57,7 +57,9 @@
             b.onmouseout=function(){this.style.transform='scale(1)'};
             b.onclick=()=>{
                 i.style.display=i.style.display==='none'?'block':'none';
-                p.style.display=i.style.display==='block'?'none':'block';
+                if (i.style.display === 'block') {
+                    p.style.display = 'none';
+                }
                 document[i.style.display==='block'?'addEventListener':'removeEventListener']('click',d);
             };
             d=e=>{if(e.target.id!=='chatbot-iframe'&&e.target.id!=='chatbot-button')i.style.display='none',document.removeEventListener('click',d)};
@@ -68,5 +70,9 @@
     <script src="{{ url_for('static', filename='js/integrations.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-javascript.min.js"></script>
+
+
+    
+
 </body>
 </html>
