integrating icon correctly

--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -41,7 +41,7 @@
     </ul>
     <div class="code-container">
         <pre><code id="chatbot-code" class="language-javascript">
-            &lt;img id="chatbot-button" src="http://127.0.0.1:5000//static/images/{{ settings['widget_icon'] }}.svg" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;"&gt;
+            &lt;img id="chatbot-button" src="http://127.0.0.1:5000//static/images/{{ settings['widget_icon'] }}" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;"&gt;
             &lt;div id="p" style="display:{{popup_logic}};position:fixed;bottom:100px;right:15px;z-index:10000;background:#fff;border:1px solid #ccc;padding:10px;border-radius:5px;box-shadow:0 0 10px rgba(0,0,0,.1);">{{ settings['popup_message'] }}&lt;/div&gt;
             &lt;span id="c" style="display:none;position:fixed;bottom:128px;right:10px;z-index:10001;cursor:pointer;padding:2px 6px;border-radius:10px;background-color:#dadada;font-family: arial;color: #4e4e4e;"&gt;x&lt;/span&gt;
             &lt;script&gt;
